# PyVALION

./: .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs.yml  main.yml
PyVALION/: __init__.py  library.py  plotting.py
PyVALION.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: Makefile  api.rst  citing.rst  conf.py  develop_guide.rst  examples.rst  history.rst  index.rst  installation.rst  overview.rst
docs/examples/: Example_PyIRI_GIRO_Validation.rst  Example_PyIRI_Jason_Validation.rst  Example_PyIRI_Validation.rst
docs/tutorials/: Tutorial_1.py  Tutorial_1_GIRO.ipynb  Tutorial_1_GIRO.py  Tutorial_1_Jason.ipynb  Tutorial_1_Jason.py
tests/: test_core.py
