[build-system]
requires = ["setuptools >= 38.6", "pip >= 10"]
build-backend = "setuptools.build_meta"

[project]
name = "PyVALION"
version = "0.2.0"
description = "Python Validation Tool for the Ionosphere"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Victoriya Forsythe", email = "victoriyaforsythe@protonmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows"
]
keywords = [
  "ionosphere",
  "modeling",
  "modelling"
]
dependencies = [
  "matplotlib",
  "numpy",
  "scipy",
  "cartopy",
  "pandas",
  "PyIRI",
  "netCDF4",
  "siphon",
  "tqdm"
]

[project.optional-dependencies]
test = [
  "coveralls",
  "flake8",
  "flake8-docstrings",
  "hacking >= 1.0",
  "pytest",
  "pytest-cov",
]
doc = [
  "extras_require",
  "ipython",
  "myst_parser",
  "numpydoc",
  "pyproject-parser",
  "sphinx < 9.0",
  "sphinx_rtd_theme"
]

[project.urls]
Documentation = "https://pyvalion.readthedocs.io/en/latest/"
Source = "https://github.com/victoriyaforsythe/PyVALION"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.260113 ; python_full_version >= '3.10'",
    "scipy-stubs>=1.15.3.0 ; python_full_version >= '3.10'",
]
